@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
+
+<!--Guide Template  -->
+
 <Guide>
     <guidename guideid="" version="1.0">
         Name Of Guide
@@ -16,3 +19,10 @@
 				<answer atarget = "" >![CDATA[]]</answer>
 			</element>
 </Guide>
+
+
+<!--Error Template-->
+
+<error>
+    <"[Error number]">"error message"<"[Error number]">
+</error>
