@@ -1,0 +1,4 @@
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<errors>
+    <gerr1>Test works</gerr1>
+</errors>
