@@ -10,7 +10,7 @@
     <script type="text/javascript">
         var guideArea;
         function inti() {
-            guideArea = new GuideObj("guide_area", "xml-list.xml", true);
+            guideArea = new GuideObj("guide_area", "/XML/XML_List/xml-list.xml", true);
             guideArea.active_guide();
         }
     </script>
